# bookmark-tools

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  simulate_ci_pipeline.sh
.github/workflows/: ci.yml
bookmark_tools/: check.py  classify.py  cli.py  config.py  delete.py  embeddings.py  fetch.py  http_retry.py  link.py  paths.py  render.py  reorg.py  search.py  search_documents.py  search_index.py  stats.py  summarize.py  tag_normalize.py  types.py  update.py  vault_profile.py
bookmark_tools/config/: classification-guide.md
docs/: plan.md  web-plan.md
tests/: README.md  test_bookmark_search.py  test_bookmarks.py  test_check.py  test_config.py  test_delete.py  test_embeddings.py  test_fetch.py  test_http_retry.py  test_integration.py  test_link.py  test_render.py  test_reorg.py  test_stats.py  test_tag_normalize.py  test_update.py  test_web_bookmarks.py  test_web_stats.py
web/: __main__.py  app.py
web/routes/: bookmarks.py  browse.py  search.py  stats.py
web/static/: style.css
web/templates/: base.html  index.html  manage.html  search.html  stats.html
web/templates/partials/: bookmark_detail.html  bookmark_list.html  folder_tree.html  search_results.html  stats_cards.html
