[project]
name = "bookmark-tools"
version = "0.1.0"
description = "CLI tools for fetching, classifying, and searching bookmarks in an Obsidian vault"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "numpy>=1.26",
]

[project.scripts]
bookmark = "bookmark_tools:main"
bookmark-search = "bookmark_tools.search:main"
bookmark-check = "bookmark_tools.check:main"
bookmark-stats = "bookmark_tools.stats:main"
bookmark-update = "bookmark_tools.update:main"
bookmark-reorg = "bookmark_tools.reorg:main"

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]

[tool.hatch.build.targets.wheel]
packages = ["bookmark_tools"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
